# MCPServers

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
BlockChain/cross_chain_bridge_assistant/: README.md  bridge_transactions.db  main.py  pyproject.toml  requirements.txt
BlockChain/cross_chain_bridge_assistant/server/: server.py
BlockChain/mcp-crypto-wallet/: README.md  main.py  pyproject.toml  requirements.txt
BlockChain/mcp-crypto-wallet/server/: .env  server.py
BlockChain/mcp_smart_contract_auditor/: README.md  main.py  pyproject.toml  requirements.txt
BlockChain/mcp_smart_contract_auditor/server/: server.py
BlockChain/nft_marketPlace_assistant/: README.md  main.py  pyproject.toml  requirements.txt
BlockChain/nft_marketPlace_assistant/server/: nft_marketplace.db  server.py  server_new.py
CyberSecurity/ComplianceMCP/: API_DOCS.md  README.md  main.py  pyproject.toml  requirements.txt
CyberSecurity/ComplianceMCP/server/: compliance.db  server.py
CyberSecurity/nmap_mcp/: README.md  main.py  pyproject.toml  requirements.txt
CyberSecurity/nmap_mcp/server/: cybersecurity.db  server.py
demos/: README.md  demo_bridge.py  demo_security.py  launcher.py  requirements.txt
docs/: portfolio.md  showcase.html
