[project]
name = "cross-chain-bridge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "cachetools>=6.1.0",
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "web3>=7.12.1",
]
