[project]
name = "mcp-crypto-wallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eth-account>=0.13.7",
    "eth-keys>=0.7.0",
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
    "web3>=7.12.0",
]
