[project]
name = "nft-marketplace-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.6",
    "cachetools>=5.3.1",
    "mcp[cli]>=0.1.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.41",
    "web3>=6.11.0",
]
